# backend/api/gen/kb/v1/kb_grpc.pb.go
@@ -1,6 +1,6 @@
 // Code generated by protoc-gen-go-grpc. DO NOT EDIT.
 // versions:
-// - protoc-gen-go-grpc v1.6.1
+// - protoc-gen-go-grpc v1.6.2
 // - protoc             (unknown)
 // source: kb/v1/kb.proto
 
@@ -33,6 +33,8 @@ const (
 	KnowledgeBaseService_PrepareDocumentUpload_FullMethodName  = "/pivot.kb.v1.KnowledgeBaseService/PrepareDocumentUpload"
 	KnowledgeBaseService_ConfirmDocumentUpload_FullMethodName  = "/pivot.kb.v1.KnowledgeBaseService/ConfirmDocumentUpload"
 	KnowledgeBaseService_GetDocumentDownloadURL_FullMethodName = "/pivot.kb.v1.KnowledgeBaseService/GetDocumentDownloadURL"
+	KnowledgeBaseService_ListChunks_FullMethodName             = "/pivot.kb.v1.KnowledgeBaseService/ListChunks"
+	KnowledgeBaseService_GetParseStatus_FullMethodName         = "/pivot.kb.v1.KnowledgeBaseService/GetParseStatus"
 )
 
 // KnowledgeBaseServiceClient is the client API for KnowledgeBaseService service.
@@ -59,6 +61,9 @@ type KnowledgeBaseServiceClient interface {
 	PrepareDocumentUpload(ctx context.Context, in *PrepareDocumentUploadRequest, opts ...grpc.CallOption) (*PrepareDocumentUploadResponse, error)
 	ConfirmDocumentUpload(ctx context.Context, in *ConfirmDocumentUploadRequest, opts ...grpc.CallOption) (*ConfirmDocumentUploadResponse, error)
 	GetDocumentDownloadURL(ctx context.Context, in *GetDocumentDownloadURLRequest, opts ...grpc.CallOption) (*GetDocumentDownloadURLResponse, error)
+	// Chunk & parse status
+	ListChunks(ctx context.Context, in *ListChunksRequest, opts ...grpc.CallOption) (*ListChunksResponse, error)
+	GetParseStatus(ctx context.Context, in *GetParseStatusRequest, opts ...grpc.CallOption) (*GetParseStatusResponse, error)
 }
 
 type knowledgeBaseServiceClient struct {
@@ -221,6 +226,26 @@ func (c *knowledgeBaseServiceClient) GetDocumentDownloadURL(ctx context.Context,
 	return out, nil
 }
 
+func (c *knowledgeBaseServiceClient) ListChunks(ctx context.Context, in *ListChunksRequest, opts ...grpc.CallOption) (*ListChunksResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(ListChunksResponse)
+	err := c.cc.Invoke(ctx, KnowledgeBaseService_ListChunks_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *knowledgeBaseServiceClient) GetParseStatus(ctx context.Context, in *GetParseStatusRequest, opts ...grpc.CallOption) (*GetParseStatusResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(GetParseStatusResponse)
+	err := c.cc.Invoke(ctx, KnowledgeBaseService_GetParseStatus_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // KnowledgeBaseServiceServer is the server API for KnowledgeBaseService service.
 // All implementations must embed UnimplementedKnowledgeBaseServiceServer
 // for forward compatibility.
@@ -245,6 +270,9 @@ type KnowledgeBaseServiceServer interface {
 	PrepareDocumentUpload(context.Context, *PrepareDocumentUploadRequest) (*PrepareDocumentUploadResponse, error)
 	ConfirmDocumentUpload(context.Context, *ConfirmDocumentUploadRequest) (*ConfirmDocumentUploadResponse, error)
 	GetDocumentDownloadURL(context.Context, *GetDocumentDownloadURLRequest) (*GetDocumentDownloadURLResponse, error)
+	// Chunk & parse status
+	ListChunks(context.Context, *ListChunksRequest) (*ListChunksResponse, error)
+	GetParseStatus(context.Context, *GetParseStatusRequest) (*GetParseStatusResponse, error)
 	mustEmbedUnimplementedKnowledgeBaseServiceServer()
 }
 
@@ -296,6 +324,12 @@ func (UnimplementedKnowledgeBaseServiceServer) ConfirmDocumentUpload(context.Con
 }
 func (UnimplementedKnowledgeBaseServiceServer) GetDocumentDownloadURL(context.Context, *GetDocumentDownloadURLRequest) (*GetDocumentDownloadURLResponse, error) {
 	return nil, status.Error(codes.Unimplemented, "method GetDocumentDownloadURL not implemented")
+}
+func (UnimplementedKnowledgeBaseServiceServer) ListChunks(context.Context, *ListChunksRequest) (*ListChunksResponse, error) {
+	return nil, status.Error(codes.Unimplemented, "method ListChunks not implemented")
+}
+func (UnimplementedKnowledgeBaseServiceServer) GetParseStatus(context.Context, *GetParseStatusRequest) (*GetParseStatusResponse, error) {
+	return nil, status.Error(codes.Unimplemented, "method GetParseStatus not implemented")
 }
 func (UnimplementedKnowledgeBaseServiceServer) mustEmbedUnimplementedKnowledgeBaseServiceServer() {}
 func (UnimplementedKnowledgeBaseServiceServer) testEmbeddedByValue()                              {}
@@ -552,6 +586,42 @@ func _KnowledgeBaseService_GetDocumentDownloadURL_Handler(srv interface{}, ctx c
 	return interceptor(ctx, in, info, handler)
 }
 
+func _KnowledgeBaseService_ListChunks_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(ListChunksRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(KnowledgeBaseServiceServer).ListChunks(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: KnowledgeBaseService_ListChunks_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(KnowledgeBaseServiceServer).ListChunks(ctx, req.(*ListChunksRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _KnowledgeBaseService_GetParseStatus_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(GetParseStatusRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(KnowledgeBaseServiceServer).GetParseStatus(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: KnowledgeBaseService_GetParseStatus_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(KnowledgeBaseServiceServer).GetParseStatus(ctx, req.(*GetParseStatusRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 // KnowledgeBaseService_ServiceDesc is the grpc.ServiceDesc for KnowledgeBaseService service.
 // It's only intended for direct use with grpc.RegisterService,
 // and not to be introspected or modified (even as a copy)
@@ -606,6 +676,14 @@ var KnowledgeBaseService_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "GetDocumentDownloadURL",
 			Handler:    _KnowledgeBaseService_GetDocumentDownloadURL_Handler,
+		},
+		{
+			MethodName: "ListChunks",
+			Handler:    _KnowledgeBaseService_ListChunks_Handler,
+		},
+		{
+			MethodName: "GetParseStatus",
+			Handler:    _KnowledgeBaseService_GetParseStatus_Handler,
 		},
 	},
 	Streams: []grpc.StreamDesc{
